# cc-plugins

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.testing/: __init__.py  cleanup_all.py  conftest.py  pytest.ini  requirements-dev.txt  run_tests.py
acontext/: .mcp.json  requirements.txt  setup.sh
activitywatch/: .mcp.json  README.md  requirements.txt  run  setup.sh
arise-bmad-extension/: README.md
client-onboarding/: README.md  requirements.txt  run  setup.sh  test.sh
core/: README.md  setup.sh
demo-deploy/: README.md  setup.sh  test.sh
diagrams/: README.md  setup.sh  test.sh
doc-gen/: README.md  requirements.txt  setup.sh
fathom/: .mcp.json  README.md  plugin.json
fireflies/: .mcp.json  README.md  mcp-wrapper  requirements.txt  setup.sh
gmail/: README.md  authenticate.py  setup.sh
infrastructure/: README.md  setup.sh  test.sh
leads/: README.md  setup.sh  test.sh
loom/: .mcp.json  README.md  mcp-wrapper  setup.sh
md-export/: README.md  setup.sh  test.sh
n8n/: .mcp.json  README.md  mcp-wrapper  setup.sh  test.sh
notion/: .mcp.json  README.md  requirements.txt  run
pandadoc/: README.md  requirements.txt  setup.sh
proposal/: README.md  setup.sh  test.sh
slack/: README.md  setup.sh  test.sh
sop/: README.md  run  setup.sh  test.sh
ssh/: README.md  setup.sh  test.sh
tasks/: .mcp.json  README.md
tests/: run_all_tests.sh
tools/: generate-tests.py  plugin-scaffold.py
unipile/: README.md  requirements.txt  setup.sh
video-sop/: README.md  (+2 more)
(+280 files in other folders)
